subdir('config-env')
subdir('config-gnome')
subdir('config-osx')
subdir('config-sysconfig')
subdir('config-windows')

subdir('download-curl')
subdir('download-soup')

subdir('pacrunner-duktape')

summary({
  'Configuration Environment' : get_option('config-env'),
  'Configuration GNOME      ' : get_option('config-gnome'),
  'Configuration Windows    ' : get_option('config-windows'),
  'Configuration sysconfig  ' : get_option('config-sysconfig'),
  'Configuration OS X       ' : get_option('config-osx'),
  'Download cURL            ' : get_option('download-curl'),
  'Download Soup            ' : get_option('download-soup'),
  'PAC Runner Duktape       ' : get_option('pacrunner-duktape'),
}, section: 'Plugins')