subdir('config-env')
subdir('config-gnome')
subdir('config-kde')
subdir('config-osx')
subdir('config-sysconfig')
subdir('config-windows')

subdir('pacrunner-duktape')

summary({
  'Configuration Environment' : get_option('config-env'),
  'Configuration GNOME      ' : get_option('config-gnome'),
  'Configuration KDE        ' : get_option('config-kde'),
  'Configuration Windows    ' : get_option('config-windows'),
  'Configuration sysconfig  ' : get_option('config-sysconfig'),
  'Configuration OS X       ' : get_option('config-osx'),
  'PAC Runner Duktape       ' : get_option('pacrunner-duktape'),
}, section: 'Plugins')